--- a/src/Styles/Beneficios.css
+++ b/src/Styles/Beneficios.css
@@ -18,7 +18,7 @@
 .cards-beneficios {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  gap: 10px;
 }
 
 /* Estiliza cada Card */
@@ -73,8 +73,9 @@
   cursor: pointer;
   margin-top: 20px;
   transition: 0.3s;
+  border-radius: 10px;
 }
 
 .botao-beneficios:hover {
-  background: #333;
+  background: #04bb14;
 }
