--- a/src/Styles/WhatsAppModal.css
+++ b/src/Styles/WhatsAppModal.css
@@ -154,16 +154,51 @@
 
 
 
-.loading-spinner {
-    width: 20px;
-    height: 20px;
-    border: 3px solid #fff;
-    border-top-color: transparent;
-    border-radius: 50%;
-    animation: spin 0.7s linear infinite;
+/* Centralizar a animação */
+.custom-loader-container {
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
+    height: 100px; /* Ajuste conforme necessário */
 }
 
-@keyframes spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+
+/* Custom Loader Animation */
+.custom-loader {
+    --size-loader: 50px;
+    --size-orbe: 10px;
+    width: var(--size-loader);
+    height: var(--size-loader);
+    position: relative;
+    transform: rotate(45deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-orbe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    --delay: calc(var(--index) * 0.1s);
+    animation: custom-orbit 1.5s ease-in-out var(--delay) infinite;
+    opacity: calc(1 - calc(0.2 * var(--index)));
+}
+
+.custom-orbe::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: var(--size-orbe);
+    height: var(--size-orbe);
+    background-color: #04e252;
+    box-shadow: 0px 0px 20px 2px #141414;
+    border-radius: 50%;
+}
+
+@keyframes custom-orbit {
+    0% { transform: rotate(0deg); }
+    80% { transform: rotate(360deg); }
+    100% { transform: rotate(360deg); }
 }
