--- a/src/Styles/Mobile/Sidebar.css
+++ b/src/Styles/Mobile/Sidebar.css
@@ -4,11 +4,12 @@
   left: -250px;
   width: 250px;
   height: 100%;
-  background-color: #818181;
+  background-color: #0d1117;
   padding: 20px;
   transition: 0.3s;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
   z-index: 2;
+  border-radius: 0px 30px 0px 0px;
   }
   
   .sidebar.open {
