--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -96,8 +96,10 @@
 
 
 .footer-bottom {
+    background-color: #ffffff;
+    color: #0d1117 !important;
     margin-top: 20px;
     font-size: 12px;
-    color: rgb(200, 200, 200);
+    padding: 1%;
 }
 
