--- a/src/Styles/Formulario/Mobile/FormularioMobile.css
+++ b/src/Styles/Formulario/Mobile/FormularioMobile.css
@@ -36,6 +36,7 @@ button.proximo-mobile, button.voltar-mobile {
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 button.proximo-mobile {
