integração com pesquisa google e viaCEP

--- a/src/Styles/Cadastro.css
+++ b/src/Styles/Cadastro.css
@@ -154,6 +154,16 @@ input[type="date"] {
   }
 }
 
+.precoD-planoD-containeMobile{
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 16px;
+  color: #333;
+  flex-direction: row-reverse;
+}
+
 }
 
 
