--- a/src/Styles/Formulario/ModalConfirmacao.css
+++ b/src/Styles/Formulario/ModalConfirmacao.css
@@ -11,7 +11,7 @@
     z-index: 999;
   }
   
-  .modal-content {
+  .modal-contentCad {
     background: #fff;
     padding: 30px 20px;
     border-radius: 12px;
@@ -23,12 +23,12 @@
 }
 
 
-  .modal-content h2 {
+  .modal-contentCad h2 {
     color: #28a745;
     margin-bottom: 15px;
   }
   
-  .modal-content .btn-fechar {
+  .modal-contentCad .btn-fechar {
     background-color: #28a745;
     color: white;
     border: none;
@@ -39,3 +39,50 @@
     cursor: pointer;
   }
   
+
+  @media screen and (max-width: 768px) {
+
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+    }
+    
+    .modal-contentCad {
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+      color: black;
+  }
+  
+  
+    .modal-contentCad h2 {
+      color: #28a745;
+      margin-bottom: 15px;
+    }
+    
+    .modal-contentCad .btn-fechar {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      margin-top: 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+
+
+  }
